--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build":"npm install && npm install --prefix clients && npm run build --prefic clients"
+    "build":"npm install && npm install --prefix clients && npm run build --prefix clients"
   },
   "author": "",
   "license": "ISC",
